--- a/style.css
+++ b/style.css
@@ -9,17 +9,21 @@
 .topnav {
   position: fixed;
   background-color: #333;
-  overflow: hidden;
+  overflow: auto;
+  top:0;
+  width: 100%;
+  text-align: center;
+  display:block;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: right;
+  float: none;
   color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+  display: inline-flex;
+  padding: 20px 16px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 35px;
 }
 
 /* Change the color of links on hover */
@@ -29,10 +33,10 @@
 }
 
 .topnav-centered a {
-  position:center;
+  position:relative;
   top: 0;
   left: 0;
-  transform: none;
+  transform:none;
 }
  /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
