--- a/style.css
+++ b/style.css
@@ -47,7 +47,51 @@ iframe.center {
 #intromessage {
   display: flex;
 }
-
+.like-content {
+  display: inline-block;
+  width: 100%;
+  margin: 40px 0 0;
+  padding: 40px 0 0;
+  font-size: 18px;
+  text-align: center;
+}
+.like-content span {
+color: #9d9da4;
+font-family: monospace;
+}
+.like-content .btn-secondary {
+  display: block;
+  margin: 40px auto 0px;
+  text-align: center;
+  background: royalblue;
+  border-radius: 3px;
+  box-shadow: 0 10px 20px -8px rgba(65, 105, 225, 0.61);
+  padding: 10px 17px;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  color: #ffffff;
+  text-decoration: none;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.like-content .btn-secondary:hover {
+  transform: translateY(-3px);
+}
+.like-content .btn-secondary .fa {
+  margin-right: 5px;
+}
+.animate-like {
+animation-name: likeAnimation;
+animation-iteration-count: 1;
+animation-fill-mode: forwards;
+animation-duration: 0.65s;
+}
+@keyframes likeAnimation {
+0%   { transform: scale(30); }
+100% { transform: scale(1); }
+}
 #cont {
   padding: 5px;
   display: flex;
