--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ input[type=submit]:hover {
 /* Add a background color and some padding around the form */
 .container {
   border-radius: 5px;
-  background-color: #454a4d;
+  background-color: #bc8f8f;
   padding: 20px;
 } 
 .decorated{
@@ -182,7 +182,7 @@ input[type=submit]:hover {
    border-bottom: 2px solid;
    width: 1082px; /* half of limiter*/
    margin: 0 20px;
-   color: #f4c2c2;
+   color: #808080;
 }
 .decorated > span:before{
    right: 100%;
